change position of ? button so that it no longer covers the titles

--- a/shiny_app/www/styles.css
+++ b/shiny_app/www/styles.css
@@ -207,7 +207,7 @@ th, td {
   border-radius: 3px;
   box-shadow: 0px 0px 0px 0px;
   position: absolute;
-  right: 50px;
+  right: 20px;
 }
 
 
